# opencl-cpp-tutorial

./: CMakeLists.txt  README.md  hello_world.cl  hello_world.cpp  process_array.cl  process_array.cpp  process_multidim.cpp  test.cpp
opencl_helper/: CMakeLists.txt
opencl_helper/include/: opencl_helper.h
opencl_helper/src/: opencl_helper.cpp
